2023-08-04  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-skeleton-write-region): Fix scoping.  (Bug#65022)

2023-08-03  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-convert-file-attributes): Extract SELinux context.

	* tramp-sh.el (tramp-stat-file-attributes-with-selinux)
	(tramp-stat-directory-files-and-attributes-with-selinux): New defconst.
	(tramp-do-file-attributes-with-ls)
	(tramp-do-file-attributes-with-stat)
	(tramp-do-directory-files-and-attributes-with-stat): Return also
	SELinux context.
	(tramp-remote-selinux-p, tramp-do-copy-or-rename-file): Adapt docstring.

	* tramp-sudoedit.el (tramp-sudoedit-do-copy-or-rename-file)
	(tramp-sudoedit-remote-selinux-p): Adapt docstring.
	(tramp-sudoedit-file-attributes-with-selinux): New defconst.
	(tramp-sudoedit-handle-file-attributes): Use it.

2023-08-01  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-byte-run--set-suppress-trace): New defun, moved
	from tramp-message.el.
	(tramp-file-name-unify, tramp-file-name-equal-p)
	(tramp-tramp-file-p, tramp-find-method, tramp-find-user)
	(tramp-find-host, tramp-dissect-file-name)
	(tramp-ensure-dissected-file-name, tramp-buffer-name)
	(tramp-delete-temp-file-function, tramp-time-diff):
	Declare `tramp-suppress-trace' property.

	* tramp-archive.el (tramp-archive-file-name-handler-alist):
	Use `tramp-archive-handle-file-symlink-p'.
	(tramp-archive-handle-file-symlink-p): New defun.

	* tramp-cache.el (tramp-loaddefs): Don't require.
	(tramp-get-hash-table, tramp-cache-print)
	(tramp-dump-connection-properties): Declare `tramp-suppress-trace'
	property.

	* tramp-cmds.el (tramp-cleanup-dired-buffer-p)
	(tramp-delete-tainted-remote-process-buffer-function):
	Declare `tramp-suppress-trace' property.

	* tramp-compat.el (tramp-loaddefs): Require.
	(tramp-error): Declare.

	* tramp-crypt.el (tramp-crypt-file-name-handler): Fix typo.

	* tramp-integration.el (tramp-rfn-eshadow-setup-minibuffer)