@@ -1,3 +1,8 @@
+2023-08-07  Po Lu  <luangruo@yahoo.com>
+
+	* tramp.el (tramp-encoding-shell): Where /bin/sh was previously
+	used, use /system/bin/sh on Android.
+
 2023-08-04  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-skeleton-write-region): Fix scoping.  (Bug#65022)
